# oft-orchestrator

./: .gitignore  Cargo.toml
evm/: .gitmodules  foundry.toml
evm/script/: DeployOFT.s.sol
evm/src/: MyOFT.sol
src/: evm_ops.rs  main.rs  solana_ops.rs  utils.rs
